--- a/src/css/01-gallery.css
+++ b/src/css/01-gallery.css
@@ -41,9 +41,13 @@
   cursor: zoom-in;
 }
 
+
+
 .gallery {
   list-style: none;
   padding: 0;
   margin: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; 
 }
-
