--- a/src/css/01-gallery.css
+++ b/src/css/01-gallery.css
@@ -48,7 +48,7 @@
   margin: 0;
   display: flex;
   justify-content: center; /* Вирівнюємо контент по центру */
-  /*flex-wrap: wrap; /* Обгортання елементів, якщо не вистачає місця */
+  flex-wrap: wrap; /* Обгортання елементів, якщо не вистачає місця */
 }
 
 
