--- a/src/css/01-gallery.css
+++ b/src/css/01-gallery.css
@@ -44,8 +44,8 @@
 
 .gallery {
   list-style: none;
-  padding: 0;
-  margin: 0;
+  /*padding: 0;
+  margin: 0;*/
   display: flex;
   justify-content: center; /* Вирівнюємо контент по центру */
   /*flex-wrap: wrap; /* Обгортання елементів, якщо не вистачає місця */
